hphp/hack/test/typecheck/list_pair_assign.php.like_types.exp
File "list_pair_assign.php", line 5, characters 10-26:
Invalid return type (Typing[4110])
File "list_pair_assign.php", line 3, characters 38-69:
Expected ~(Pair<int, string>, int, string) because it is an unenforceable type
File "list_pair_assign.php", line 5, characters 10-26:
But got (~Pair<int, string>, ~int, ~string)
